# GameEngine

./: .gitignore  CMakeLists.txt  README.md
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp
practical_1/: main.cpp
practical_2/: Ship.cpp  bullet.cpp  bullet.h  game.h  main.cpp  ship.h
practical_3/: entity.cpp  main.cpp  player.cpp  player.h
practical_4/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_pickup.cpp  cmp_pickup.h  cmp_sprite.cpp  entity.cpp  entity.h  ghost.cpp  main.cpp  pacman.cpp  pacman.h  player.cpp  scene.cpp  scene.h
practical_5/: main.cpp
practical_6/: platformer_main.cpp
practical_6/components/: cmp_player_physics.cpp
practical_6/scenes/: scene_level2.cpp
